fix error align in phone component

--- a/src/app/components/molecules/menu/menu.component.scss
+++ b/src/app/components/molecules/menu/menu.component.scss
@@ -2,13 +2,13 @@
 
 .menu-container{
 	color: var(--white-primary);
-	transform: translateX(0);
+	transition: transform 1s ease-in;
 	&.active{
 		transform: translateX(0);
 		opacity: 1;
 	}
 	@include to($lg){
-		transition: transform 400ms ease-in;
+		transition-duration: 300ms;
 		background-color: var(--white-primary);
 		color: var(--black-primary);
 		position: absolute;
@@ -19,7 +19,7 @@
 		max-width: 500px;
 		box-shadow: 0px 3px 6px #9B9B9B4A;
 		padding: 4rem 2rem 3rem 2rem;
-		transform: translateX(-100vw);
+		transform: translateX(-100%);
 		opacity: 0;
 	}
 }
