--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,6 +87,9 @@ hr{
 		margin: 2rem 0;
 	}
 }
+span{
+	vertical-align: middle
+}
 
 // Para la "Cascada de CSS"
 @import './assets/styles/_module';
